--- a/mvcHostel/mvcHostel/Web.config
+++ b/mvcHostel/mvcHostel/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,11 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-   
-  <add name="hostelEntities" 
-       connectionString="metadata=res://*/hostelModel.csdl|res://*/hostelModel.ssdl|res://*/hostelModel.msl;provider=Npgsql;provider connection string=&quot;port=5432;timeout=15;pooling=True;minpoolsize=1;maxpoolsize=20;commandtimeout=20;compatible=2.2.3.0;database=hostel;host=localhost;user id=postgres;password=123&quot;" 
-       providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="hostelEntities" connectionString="metadata=res://*/Models.HostelEntities.csdl|res://*/Models.HostelEntities.ssdl|res://*/Models.HostelEntities.msl;provider=Npgsql;provider connection string=&quot;port=5432;timeout=15;pooling=True;minpoolsize=1;maxpoolsize=20;commandtimeout=20;compatible=2.2.3.0;user id=postgres;password=123;host=localhost;database=hostel&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <!--<connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-mvcHostel-20150315150608;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-mvcHostel-20150315150608.mdf" />
   </connectionStrings>-->
@@ -25,7 +21,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
     <authentication mode="None" />
     <pages>
@@ -71,6 +71,12 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="Npgsql" />
+      <add name="Npgsql Data Provider" invariant="Npgsql" support="FF" description=".Net Framework Data Provider for Postgresql" type="Npgsql.NpgsqlFactory, Npgsql" />
+    </DbProviderFactories>
+  </system.data>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -88,14 +94,9 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="v11.0" />
-      </parameters>
-    </defaultConnectionFactory>
     <providers>
-      <!--<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />-->
       <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, Npgsql.EntityFramework" />
     </providers>
+    <defaultConnectionFactory type="Npgsql.NpgsqlConnectionFactory, Npgsql" />
   </entityFramework>
 </configuration>
